src/shared/components/super-card/super-card.css
/**
 * Block
 */

.hw-super-card {

  position: relative;
  background: var(--hw-color-white);
  transition: transform 0.3s;
  display: flex;
  flex-direction: column;

  &:after {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    transition: opacity 1s cubic-bezier(0.165, 0.84, 0.44, 1);
    box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.15);
    content: '';
    opacity: 0;
  }
  &:hover {
    &::after {
      opacity: 1;
    }
  }

  /**
   * Elements
   */

  &__header{
    display: inline-flex;
    padding: var(--hw-spacing-smaller);
    padding-left: var(--hw-spacing-small);
    width:100%;
  }
  &__header-icon{
    width: 54px;
    height: 54px;
    background-color: var(--hw-color-green);
    border-radius: 50%;
    background-position: center;
    background-size: cover;
  }
  &__header-sub-header{
    width:86%;
    padding-left: var(--hw-spacing-smaller);
    padding-top: var(--hw-spacing-smallest);
  }

  &__media {
    height: 300px;
    width: 100%;
    object-fit:cover;
    overflow: hidden;
    flex-basis: auto;
  }

  &__media-inner {
    width: 100%;
    height: 100%;
    background-position: center;
    background-size: cover;
    transition: all 0.3s cubic-bezier(0, 0, 0.1, 1);
  }

  &__body {
    z-index: 1;
    padding: var(--hw-spacing-small);
  }

  &__title {
    font-size: var(--hw-font-size-h3);
    line-height:0.8;
  }

  &__text-primary {
    min-height: 30px;
    font-size: var(--hw-font-size-p);
    color: var(--hw-color-gray);
  }

  &__text-primary + .hw-super-card__text-secondary{
    margin-top: var(--hw-spacing-smaller);
  }

  &__text-secondary {
    min-height: 30px;
    font-size: var(--hw-font-size-p );
    color: var(--hw-color-gray);
  }

  @media(--large){
    &__media {
      height: 300px;
    }
  }
  @media(--max-medium){
    &__media {
      height: 220px;
    }
  }

}

